Fixed overflow-x and added footer design

--- a/public/styles.css
+++ b/public/styles.css
@@ -27,7 +27,9 @@ h1 {
 }
 
 .container-fluid {
+  overflow-x: hidden;
   margin: 0;
+  padding: 0;
 }
 
 .title-color {
@@ -49,7 +51,7 @@ h1 {
 }
 
 .navbar {
-  padding-top: 50px;
+  padding: 50px 30px 0;
   height: 120px;
 }
 
@@ -63,7 +65,7 @@ h1 {
 
 .nav-link{
   font-weight: 400;
-  margin-right: 20px;
+  margin-left: 20px;
 }
 
 .nav-link:hover {
@@ -89,7 +91,7 @@ h1 {
 }
 
 .title-text {
-  padding: 200px 50px 0 0;
+  padding: 200px 30px 0 0;
   font-size: 8rem;
 }
 
@@ -134,7 +136,6 @@ h1 {
 .carousel-image3 {
   background: url("https://1mpkoh2uj7ew36r28p3t8kxt11gl-wpengine.netdna-ssl.com/wp-content/uploads/2019/03/shutterstock_1214447791-660x350.jpg");
 }
-
 /* Pricing section */
 
 .pricing-title {
@@ -147,6 +148,14 @@ h1 {
   margin: 20px 0;
   text-align: center;
   padding: 0;
+  color: #000;
+  transition: 0.3s;
+}
+
+.card:hover {
+  text-decoration: none;
+  color: #000;
+  box-shadow:3px 5px 5px 3px #ccc;
 }
 
 .card-holder {
@@ -183,6 +192,7 @@ h1 {
 /* Contact & footer section  */
 
 .bg-recolor , footer {
+  padding-bottom:0;
   background-color: #5f9484;
   text-align: center;
   color: #fff;
@@ -190,6 +200,10 @@ h1 {
 
 footer {
   padding:20px;
+}
+
+hr {
+  border-color: #3D5B53;
 }
 
 footer p {
